<resources>
	<string name="app_name">Rick and Morty</string>
	<string name="Characters">Characters</string>
	<string name="locations_nav_bar">Locations</string>
	<string name="episodes_nav_bar">Episodes</string>
	<string name="characters_nav_bar">Characters</string>
	<string name="title_filter">Choose your fighter:</string>
	<string name="title_status">Status</string>
	<string name="title_name">Name</string>
	<string name="title_episode_name">Episode name</string>
	<string name="txt_chip_alive">Alive</string>
	<string name="txt_chip_dead">Dead</string>
	<string name="txt_chip_unknown">Unknown</string>
	<string name="title_gender">Gender</string>
	<string name="txt_chip_female">Female</string>
	<string name="txt_chip_genderless">Genderless</string>
	<string name="txt_chip_male">Male</string>
	<string name="txt_checkbox_unknown">Unknown</string>
	<string name="search">Search by name…</string>
	<string name="title_btn_apply">Apply</string>
	<string name="title_reset">Reset</string>
	<string name="title_episode_code">Episode or season number</string>
	<string name="search_episode">Search by episode number…</string>
	<string name="search_episode_name">Search by episode name…</string>
	<string name="title_filter_episodes">What you wanna watch?</string>
	<string name="title_filter_locations">Where, you say???</string>
	<string name="title_location_name">Location name</string>
	<string name="search_location_name">Search by location name…</string>
	<string name="title_location_dimension">Dimension</string>
	<string name="search_location_dimension">Search by dimension…</string>
	<string name="title_location_type">Type</string>
	<string name="search_location_type">Search by type…</string>
	<string name="title_listOfCharacters">Who\'s there?</string>
	<string name="title_listOfCharactersInEpisode">Characters in the Episode:</string>
	<string name="isNotEnoughCharactersFound">No characters!</string>
	<string name="title_location">Location:</string>
	<string name="title_origin">Origin:</string>
</resources>