<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="@dimen/space_small"
	>

	<TextView
		android:id="@+id/filter_episode"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_filter_locations"
		android:textAlignment="center"
		android:textColor="@color/yellow"
		android:textSize="@dimen/font_size_medium"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"

		/>

	<TextView
		android:id="@+id/name_location_search"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/space_small"
		android:layout_marginTop="@dimen/space_small"
		android:text="@string/title_location_name"
		android:textSize="@dimen/font_size_small_x"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/filter_episode"
		tools:textColor="@color/yellow"
		/>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/searchLayoutName"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/space_small"
		android:layout_marginTop="@dimen/space_small"
		android:drawableStart="@drawable/search_24"
		app:layout_constraintBottom_toTopOf="@id/dimension_location_search"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/name_location_search"
		>

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/search_by_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints="name"
			android:drawableStart="@drawable/search_24"
			android:hint="@string/search_location_name"
			android:inputType="textPersonName"
			/>

	</com.google.android.material.textfield.TextInputLayout>

	<TextView
		android:id="@+id/dimension_location_search"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/space_small"
		android:layout_marginTop="@dimen/space_small"
		android:text="@string/title_location_dimension"
		android:textSize="@dimen/font_size_small_x"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/searchLayoutName"
		tools:textColor="@color/yellow"
		/>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/searchLayoutDimension"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/space_small"
		android:layout_marginTop="@dimen/space_small"
		android:drawableStart="@drawable/search_24"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/dimension_location_search"
		>

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/search_by_dimension"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints="name"
			android:drawableStart="@drawable/search_24"
			android:hint="@string/search_location_dimension"
			android:inputType="textPersonName"
			/>

	</com.google.android.material.textfield.TextInputLayout>

	<TextView
		android:id="@+id/type_location_search"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/space_small"
		android:layout_marginTop="@dimen/space_small"
		android:text="@string/title_location_type"
		android:textSize="@dimen/font_size_small_x"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/searchLayoutDimension"
		tools:textColor="@color/yellow"
		/>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/searchLayoutType"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/space_small"
		android:layout_marginTop="@dimen/space_small"
		android:drawableStart="@drawable/search_24"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/type_location_search"
		>

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/search_by_type"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints="name"
			android:drawableStart="@drawable/search_24"
			android:hint="@string/search_location_type"
			android:inputType="textPersonName"
			/>

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btn_make_filter"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_margin="@dimen/space_medium"
		android:background="@drawable/background_yellow"
		android:text="@string/title_btn_apply"
		android:textColor="@color/quite_white"
		app:backgroundTint="@null"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/searchLayoutType"
		/>
</androidx.constraintlayout.widget.ConstraintLayout>